# learnify-api

./: .gitignore  pyproject.toml
learnifyapi/: __init__.py  client.py  exceptions.py
learnifyapi/types/: __init__.py  model.py
learnifyapi/types/api/: gdz.py  user.py
